--- a/frontend/transporte-frontend/src/app/modules/estados-viaje/estados-viaje-list/estados-viaje-list.component.html
+++ b/frontend/transporte-frontend/src/app/modules/estados-viaje/estados-viaje-list/estados-viaje-list.component.html
@@ -29,6 +29,11 @@
         </div>
       </div>
     </div>
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-primary" [routerLink]="['/dashboard/estados-viaje/new']">
+        <i class="fas fa-plus"></i> Nuevo Estado
+      </button>
+    </div>
   </div>
 
   <!-- Mostrar error si existe -->
