--- a/frontend/transporte-frontend/src/app/modules/facturas/facturas-list/facturas-list.component.html
+++ b/frontend/transporte-frontend/src/app/modules/facturas/facturas-list/facturas-list.component.html
@@ -30,6 +30,12 @@
         </div>
       </div>
     </div>
+    <!-- Botón Nuevo -->
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-primary" [routerLink]="['/dashboard/facturas/new']">
+        <i class="fas fa-plus"></i> Nueva Factura
+      </button>
+    </div>
   </div>
 
   <!-- Mostrar error si existe -->
