--- a/frontend/transporte-frontend/src/app/modules/vehiculos/vehiculos-list/vehiculos-list.component.html
+++ b/frontend/transporte-frontend/src/app/modules/vehiculos/vehiculos-list/vehiculos-list.component.html
@@ -31,6 +31,12 @@
         </div>
       </div>
     </div>
+    <!-- Botón Nuevo -->
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-primary" [routerLink]="['/dashboard/vehiculos/new']">
+        <i class="fas fa-plus"></i> Nuevo Vehículo
+      </button>
+    </div>
   </div>
 
   <!-- Mostrar error si existe -->
