--- a/frontend/transporte-frontend/src/app/modules/viajes/viajes-list/viajes-list.component.html
+++ b/frontend/transporte-frontend/src/app/modules/viajes/viajes-list/viajes-list.component.html
@@ -32,6 +32,11 @@
         </div>
       </div>
     </div>
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-primary" [routerLink]="['/dashboard/viajes/new']">
+        <i class="fas fa-plus"></i> Nuevo Viaje
+      </button>
+    </div>
   </div>
 
   <!-- Mostrar error si existe -->
