--- a/frontend/transporte-frontend/src/app/modules/cliente/cliente-list/cliente-list.component.html
+++ b/frontend/transporte-frontend/src/app/modules/cliente/cliente-list/cliente-list.component.html
@@ -31,6 +31,11 @@
         </div>
       </div>
     </div>
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-primary" [routerLink]="['/dashboard/clientes/new']">
+        <i class="fas fa-plus"></i> Nuevo Cliente
+      </button>
+    </div>
   </div>
 
   <!-- Mostrar error si existe -->
